# etil-web

./: .gitignore  ACKNOWLEDGMENTS.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy-wasm.yml
docs/design/: 20260322-Implementation-Plan.md  20260322-Stages-3-6-Plan.md  20260322-WASM-Browser-REPL-Feasibility.md  20260323-Eigen-Matrix-Backend.md  20260323-Eigen-Matrix-Implementation-Plan.md  20260323-WASM-File-IO-Plan.md
scripts/: build.cjs
wasm/: etil_wasm.cpp
web/: index.html
web/src/: fetch-bridge.ts  glue.ts  main.ts  mock-interpreter.ts  types.ts  wasm-interpreter.ts
web/styles/: terminal.css
